--- a/python2/Dockerfile
+++ b/python2/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:2.7.9
 COPY requirements.txt /src/
+RUN cd /src && pip install -r requirements.txt
 WORKDIR /src
-RUN pip install ipython && pip install -r requirements.txt
 ENTRYPOINT ["python"]
